--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,14 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=2048m -XX:MaxMetaspaceSize=512m
 
-gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/0.25.9/gradle
+gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/1.0.2/gradle
 
-kotlinVersion=1.3.21
-kotlinCoroutinesVersion=1.1.1
-hexagonVersion=0.25.9
+kotlinVersion=1.3.31
+kotlinCoroutinesVersion=1.2.1
+hexagonVersion=1.0.2
+
+kotlinxHtmlVersion=0.6.12
 
 junitVersion=4.12
-mockkVersion=1.9.2
-cucumberVersion=4.2.6
+mockkVersion=1.9.3
+cucumberVersion=4.3.1
