--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,14 @@
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=2048m -XX:MaxMetaspaceSize=512m
 
-gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/1.0.2/gradle
+gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/1.0.3/gradle
 
 kotlinVersion=1.3.40
 kotlinCoroutinesVersion=1.2.2
-hexagonVersion=1.0.2
+hexagonVersion=1.0.3
 
 kotlinxHtmlVersion=0.6.12
+jjwtVersion=0.10.5
 
 junitVersion=4.12
 mockkVersion=1.9.3
