Ignore temporary files for Travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ branches:
 before_cache:
   - find $HOME/.gradle/caches -type f -name '*.lock' -delete
   - find $HOME/.gradle/caches -type f -name 'file-access.bin' -delete
+  - find $HOME/.gradle/caches -type f -name 'cache.properties' -delete
+  - find $HOME/.gradle/caches -type f -name 'buildSrc.jar' -delete
   - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
   - rm -rf $HOME/.gradle/caches/*/scripts*/
   - rm -rf $HOME/.gradle/caches/*/fileHashes/
