--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ kotlinCoroutinesVersion=1.2.2
 hexagonVersion=1.0.6
 
 kotlinxHtmlVersion=0.6.12
-jjwtVersion=0.10.5
+javaJwtVersion=3.8.1
 
 junitVersion=4.12
 mockkVersion=1.9.3
