--- a/backend/src/main/resources/service.yaml
+++ b/backend/src/main/resources/service.yaml
@@ -4,3 +4,7 @@ bindAddress: 0.0.0.0
 contextPath: /api
 
 mongodbUrl: mongodb://localhost/real_world
+
+keyStoreResource: keystore.p12
+keyStorePassword: storepass
+keyPairAlias: realWorld
