--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
+  },
+  "devDependencies": {
+    "highlight.js": "^9.15.10",
+    "react-grid-layout": "^0.16.6"
   }
 }
