Remove Dockerfile build stage

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,5 @@
 
 #
-# BUILD
-#
-FROM openjdk:11 as build
-USER root
-WORKDIR /build
-
-ADD . /build
-RUN ./gradlew clean all
-
-#
 # RUNTIME
 #
 FROM openjdk:11
@@ -26,7 +16,7 @@ EXPOSE 9090
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # Project install
-COPY --from=build /build/$PROJECT/build/install/$PROJECT /opt/$PROJECT
+COPY $PROJECT/build/install/$PROJECT /opt/$PROJECT
 RUN touch /opt/$PROJECT
 
 # Process execution
