--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ install:
   - docker-compose up -d mongodb
 
 script:
+  - export SERVICE_mongodbUrl="mongodb://10.20.0.10/real_world"
   - ./gradlew clean all
   - docker-compose up -d --build
   - export REPO="https://raw.githubusercontent.com/gothinkster/realworld"
