--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,12 @@
 
 version: '3'
 
-networks:
-  default:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 10.20.0.0/16
-
 services:
 
   mongodb:
     image: mongo:4.2.0
     ports:
       - 27017:27017
-    networks:
-      default:
-        ipv4_address: 10.20.0.10
 
   frontend:
     image: nginx:1.15
@@ -31,12 +21,11 @@ services:
       - backend
     volumes:
       - ./frontend/build/web:/usr/share/nginx/html:ro
-    networks:
-      default:
-        ipv4_address: 10.20.0.20
+    ports:
+      - 2080:80
 
   backend:
-    image: ${registry:-}realworld:0.1
+    image: ${registry:-}realworld:1.0
     labels:
       app: realworld
       type: backend
@@ -47,6 +36,5 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile
-    networks:
-      default:
-        ipv4_address: 10.20.0.30
+    ports:
+      - 2090:9090
