--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_cache:
   - find $HOME/.gradle/caches -type f -name 'file-access.bin' -delete
   - find $HOME/.gradle/caches -type f -name 'cache.properties' -delete
   - find $HOME/.gradle/caches -type f -name 'buildSrc.jar' -delete
-  - rm -rf $HOME/.gradle/caches/*/modules-2/metadata-2.71/resource-at-url.bin
+  - rm -rf $HOME/.gradle/caches/modules-2/metadata-*/resource-at-url.bin
   - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
   - rm -rf $HOME/.gradle/caches/*/scripts*/
   - rm -rf $HOME/.gradle/caches/*/fileHashes/
