--- a/.travis.yml
+++ b/.travis.yml
@@ -42,11 +42,11 @@ install:
 script:
   - ./gradlew clean all
   - docker-compose up -d --build
-  - export REPO="https://raw.githubusercontent.com/gothinkster/realworld"
-  - curl $REPO/master/api/Conduit.postman_collection.json -o build/postman.json
-#  - node_modules/.bin/newman run build/postman.json -e backend/src/test/resources/environment.json
   - export TEST_RES="backend/src/test/resources"
   - node_modules/.bin/newman run $TEST_RES/postman.json -e $TEST_RES/environment.json
+  - export REPO="https://raw.githubusercontent.com/gothinkster/realworld"
+  - curl $REPO/master/api/Conduit.postman_collection.json -o build/postman.json
+#  - node_modules/.bin/newman run build/postman.json -e $TEST_RES/environment.json
 
 after_success: bash <(curl -s https://codecov.io/bash)
 after_failure: echo 'Look for FAILURE in tests'
