--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,14 @@ services:
     ports:
       - 3010:27017
 
+  keycloak:
+    image: jboss/keycloak:7.0.1
+    environment:
+      KEYCLOAK_USER: root
+      KEYCLOAK_PASSWORD: root
+    ports:
+      - 3020:8080
+
   frontend:
     image: nginx:1.15
     labels:
