--- a/package.json
+++ b/package.json
@@ -1,71 +1,27 @@
 {
   "name": "reason-react-realworld-example-app",
   "version": "0.1.0",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jihchi/reason-react-realworld-example-app.git"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "yarn test:ci"
-    }
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "scripts": {
-    "build": "yarn build:bsb && yarn build:cra",
-    "build:bsb": "bsb -make-world",
-    "build:cra": "react-app-rewired build",
-    "coverage": "yarn test --coverage",
-    "deploy": "cd build && surge --domain reason-react-realworld-example-app.surge.sh",
-    "format": "yarn format:json **/*.json && yarn format:md **/*.md && find ./src/ -regex '.+\\.rei?' -exec yarn format:re {} \\;",
-    "format:json": "prettier --write --parser json",
-    "format:md": "prettier --write --parser markdown",
-    "format:re": "bsrefmt --in-place",
-    "predeploy": "yarn build",
-    "pretest": "yarn build:bsb -clean-world",
-    "start": "concurrently --kill-others-on-fail --names \"RE,JS\" --prefix-colors \"red.bgBlack.bold,yellow.bgBlack.bold\" \"yarn start:bsb\" \"yarn start:cra\"",
-    "start:bsb": "yarn build:bsb -clean-world -w",
-    "start:cra": "react-app-rewired start",
-    "test": "react-app-rewired test",
-    "test:ci": "CI=true yarn test"
+    "build": "bsb -make-world",
+    "start": "bsb -make-world -w -ws _ ",
+    "clean": "bsb -clean-world",
+    "server": "moduleserve ./ --port 8000",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "BuckleScript",
+    "ReasonReact",
+    "reason-react"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "@glennsl/bs-json": "^3.0.0",
-    "bs-fetch": "^0.3.1",
-    "bs-webapi": "^0.14.3",
-    "re-formality": "^0.10.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0",
-    "reason-react": "0.7.0",
-    "remotedata-re": "^0.2.1"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "reason-react": ">=0.7.0"
   },
   "devDependencies": {
-    "@glennsl/bs-jest": "^0.4.7",
-    "bs-platform": "5.0.3",
-    "bs-react-testing-library": "^0.5.0",
-    "concurrently": "^4.1.0",
-    "husky": "^2.2.0",
-    "jest-fetch-mock": "^2.1.2",
-    "lint-staged": "^8.1.6",
-    "prettier": "^1.17.0",
-    "react-app-rewired": "2.1.3",
-    "react-hot-loader": "^4.8.4"
+    "bs-platform": "^6.2.1",
+    "moduleserve": "^0.8.4"
   }
 }
