--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "url": "https://github.com/neomjs/neomjs-realworld-example-app.git"
     },
     "scripts": {
-        "webpack-dev-server => open": "webpack-dev-server --open",
+        "webpack-dev-server => open": "git",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -16,8 +16,9 @@
     "bugs": {
         "url": "https://github.com/neomjs/neomjs-realworld-example-app/issues"
     },
-    "homepage": "https://github.com/neomjs/neomjs-realworld-example-app",
+    "homepage": "https://neomjs.github.io/neomjs-realworld-example-app",
     "dependencies": {
+        "gh-pages": "^2.1.1",
         "neo.mjs": "^1.0.5"
     }
 }
