--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "neo.mjs": "^1.0.5"
     },
     "devDependencies": {
-        "gh-pages": "^2.1.1"
+        "gh-pages": "^2.1.1",
+        "siesta-lite": "^5.3.0"
     }
 }
