--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bugs": {
         "url": "https://github.com/neomjs/neomjs-realworld-example-app/issues"
     },
-    "homepage": "https://neomjs.github.io/neomjs-realworld-example-app/",
+    "homepage": "https://neomjs.de/",
     "dependencies": {
         "neo.mjs": "^1.0.5"
     },
