--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "webpack-dev-server => open": "git",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "deploy": "gh-pages -d dist/production/"
+        "deploy": "gh-pages -d ./"
     },
     "keywords": [],
     "author": "Tobias Uhlig, Nils Dehl",
