--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "url": "https://github.com/neomjs/neomjs-realworld-example-app.git"
     },
     "scripts": {
-        "webpack-dev-server => open": "git",
+        "server-start": "webpack-dev-server --open",
         "test": "echo \"Error: no test specified\" && exit 1",
         "deploy": "gh-pages -d ./"
     },
@@ -23,6 +23,9 @@
     },
     "devDependencies": {
         "gh-pages": "^2.1.1",
-        "siesta-lite": "^5.3.0"
+        "siesta-lite": "^5.3.0",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.10",
+        "webpack-dev-server": "^3.9.0"
     }
 }
