--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.11.2",
         "gh-pages": "^2.1.1",
+        "highlightjs-line-numbers.js": "^2.7.0",
         "siesta-lite": "^5.3.0",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.10",
