testing to include the node modules into gh pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-exclude: []
 include:
-  [/node_modules/*, node_modules]
+  [node_modules/siesta-lite, node_modules/@fortawesome, node_modules/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js]
