--- a/package.json
+++ b/package.json
@@ -19,14 +19,30 @@
     },
     "homepage": "https://neomjs.de/",
     "dependencies": {
-        "neo.mjs": "^1.0.10"
+        "neo.mjs": "^1.0.11"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.11.2",
+        "@fortawesome/fontawesome-free": "^5.12.0",
+        "autoprefixer": "^9.7.2",
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^3.2.0",
+        "cssnano": "^4.1.10",
+        "deasync": "^0.1.15",
+        "fs": "^0.0.1-security",
         "highlightjs-line-numbers.js": "^2.7.0",
+        "html-webpack-plugin": "^3.2.0",
+        "inquirer": "^7.0.0",
+        "jsdoc": "^3.6.3",
+        "jsdoc-x": "^4.0.3",
+        "mini-css-extract-plugin": "^0.8.0",
+        "node-sass": "^4.13.0",
+        "postcss-loader": "^3.0.0",
+        "sass-loader": "^8.0.0",
         "siesta-lite": "^5.3.0",
+        "style-loader": "^1.0.1",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.9.0"
+        "webpack-dev-server": "^3.9.0",
+        "webpack-node-externals": "^1.7.2"
     }
 }
