--- a/buildScripts/webpack/development/json/myApps.json
+++ b/buildScripts/webpack/development/json/myApps.json
@@ -1,16 +1,15 @@
 {
-    "bodyTag": "<body>",
     "buildFolder": "../../../dist/development",
     "environment": "development",
-    "mainInput": "./src/Main.mjs",
+    "mainInput": "./node_modules/neo.mjs/src/Main.mjs",
     "mainOutput": "main.js",
     "workers": {
         "data": {
-            "input": "./src/worker/Data.mjs",
+            "input": "./node_modules/neo.mjs/src/worker/Data.mjs",
             "output": "dataworker.js"
         },
         "vdom": {
-            "input": "./src/worker/VDom.mjs",
+            "input": "./node_modules/neo.mjs/src/worker/VDom.mjs",
             "output": "vdomworker.js"
         }
     },
