--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     },
     "scripts": {
         "server-start": "webpack-dev-server --open",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "deploy": "gh-pages -d ./"
+        "dev-build-my-apps": "webpack --config ./buildScripts/webpack/development/webpack.config.myapps.js",
+        "prod-build-my-apps": "webpack --config ./buildScripts/webpack/production/webpack.config.myapps.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "Tobias Uhlig, Nils Dehl",
