Use create-react-app 3.3.0 to develop and build application

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,7 +1,7 @@
 {
-  "name": "reason-react-examples",
+  "name": "reason-react-realworld-example-app",
   "reason": {
-    "react-jsx": 3,
+    "react-jsx": 3
   },
   "sources": {
     "dir" : "src",
