Add prettier and `format` run-script

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -4,18 +4,23 @@
     "react-jsx": 3
   },
   "sources": {
-    "dir" : "src",
-    "subdirs" : true
+    "dir": "src",
+    "subdirs": [
+      {
+        "dir": "__tests__",
+        "type": "dev"
+      }
+    ]
   },
   "bsc-flags": ["-bs-super-errors", "-bs-no-version-header"],
-  "package-specs": [{
-    "module": "commonjs",
-    "in-source": true
-  }],
+  "package-specs": [
+    {
+      "module": "commonjs",
+      "in-source": true
+    }
+  ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": [
-    "reason-react"
-  ],
+  "bs-dependencies": ["reason-react"],
   "refmt": 3
 }
