--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "reason-react-realworld-example-app",
   "version": "0.1.0",
   "scripts": {
+		"build": "npm run bsb:build && react-scripts build",
+		"format": "prettier --write **/*.json **/*.md && find ./src -regex '.*\\.re' -exec bsrefmt --in-place '{}' \\;",
     "bsb:build": "bsb -make-world",
     "bsb:clean": "bsb -clean-world",
     "bsb:start": "bsb -make-world -w -ws _ ",
-    "build": "npm run bsb:build && react-scripts build",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "bs-platform": "^6.2.1",
+    "prettier": "^1.19.1",
     "react-scripts": "^3.3.0"
   },
   "browserslist": {
