--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "reason-react-realworld-example-app",
   "version": "0.1.0",
   "scripts": {
-		"build": "npm run bsb:build && react-scripts build",
-		"format": "prettier --write **/*.json **/*.md && find ./src -regex '.*\\.re' -exec bsrefmt --in-place '{}' \\;",
-    "bsb:build": "bsb -make-world",
-    "bsb:clean": "bsb -clean-world",
-    "bsb:start": "bsb -make-world -w -ws _ ",
+    "build": "npm run re:build && npm run js:build",
+    "format": "prettier --write **/*.json **/*.md && find ./src -regex '.*\\.re' -exec bsrefmt --in-place '{}' \\;",
+    "re:start": "npm run re:build -- -w",
+    "js:build": "react-scripts build",
+    "re:build": "bsb -make-world",
+    "re:clean": "bsb -clean-world",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
@@ -23,7 +24,10 @@
     "reason-react": ">=0.7.0"
   },
   "devDependencies": {
+    "@glennsl/bs-jest": "^0.4.9",
     "bs-platform": "^6.2.1",
+    "bs-react-testing-library": "^0.6.0",
+    "bs-webapi": "^0.15.6",
     "prettier": "^1.19.1",
     "react-scripts": "^3.3.0"
   },
