--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
-dist: trusty
 language: node_js
-sudo: required
 node_js:
-  - 9
-cache:
-  directories:
-    - node_modules
-  yarn: true
+  - 10
+cache: npm
 before_script:
-  - "npm run build"
+  - 'npm run re:build'
 script:
-  - "npm run test:ci"
+  - 'npm run test:ci'
