--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,12 @@
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=2048m -XX:MaxMetaspaceSize=512m
 
-gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/1.0.20/gradle
+gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/1.1.3/gradle
+#gradleScripts=../../hexagon/gradle
 
-kotlinVersion=1.3.50
-kotlinCoroutinesVersion=1.3.2
-hexagonVersion=1.0.20
+kotlinVersion=1.3.61
+kotlinCoroutinesVersion=1.3.3
+hexagonVersion=1.1.3
 
 kotlinxHtmlVersion=0.6.12
-javaJwtVersion=3.8.2
+javaJwtVersion=3.8.3
