Adopt concurrently to start both webpack and bucklescript in one command

--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "reason-react-realworld-example-app",
   "version": "0.1.0",
   "scripts": {
-    "build": "npm run re:build && npm run js:build",
+		"clean:re": "bsb -clean-world",
+		"clean": "npm run clean:re",
+		"start:js": "react-scripts start",
+		"start:re": "npm run build:re -- -w",
+    "build:js": "react-scripts build",
+    "build:re": "bsb -make-world",
+    "build": "npm run build:re && npm run build:js",
     "format": "prettier --write \"**/*.{js,json,md,yml}\" \"!**/*.bs.js\" && find ./src -regex '.*\\.re' -exec bsrefmt --in-place '{}' \\;",
-    "js:build": "react-scripts build",
-    "re:build": "bsb -make-world",
-    "re:clean": "bsb -clean-world",
-    "re:start": "npm run re:build -- -w",
-    "start": "react-scripts start",
+    "start": "concurrently --names \"JS,RE\" --prefix-colors \"black.bgYellow.bold,white.bgRed.bold\" --kill-others-on-fail \"npm run start:js\" \"npm run start:re\"",
     "test:ci": "CI=true npm test",
     "test": "react-scripts test"
   },
@@ -29,6 +31,7 @@
     "bs-platform": "^7.0.1",
     "bs-react-testing-library": "^0.6.0",
     "bs-webapi": "^0.15.6",
+    "concurrently": "^5.0.2",
     "prettier": "^1.19.1",
     "react-scripts": "^3.3.0"
   },
