--- a/bsconfig.json
+++ b/bsconfig.json
@@ -21,9 +21,12 @@
   ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": [
+		"bs-fetch",
+		"reason-react"
+	],
   "bs-dev-dependencies": [
-    "@glennsl/bs-jest",
+		"@glennsl/bs-jest",
     "bs-dom-testing-library",
     "bs-react-testing-library",
     "bs-webapi"
