--- a/bsconfig.json
+++ b/bsconfig.json
@@ -22,8 +22,10 @@
   "suffix": ".bs.js",
   "namespace": true,
   "bs-dependencies": [
+		"bs-abstract",
 		"bs-fetch",
-		"reason-react"
+		"reason-react",
+    "relude"
 	],
   "bs-dev-dependencies": [
 		"@glennsl/bs-jest",
