--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.4.9",
+    "bs-abstract": "^0.18.0",
     "bs-dom-testing-library": "^0.5.1",
     "bs-fetch": "^0.5.0",
     "bs-platform": "^7.0.1",
@@ -35,7 +36,8 @@
     "bs-webapi": "^0.15.6",
     "concurrently": "^5.0.2",
     "prettier": "^1.19.1",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "relude": "^0.46.0"
   },
   "browserslist": {
     "production": [
