--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "reason-react-realworld-example-app",
   "version": "0.1.0",
   "scripts": {
-    "clean:re": "bsb -clean-world",
-    "clean": "npm run clean:re",
-    "start:js": "react-scripts start",
-    "start:re": "npm run build:re -- -w",
+		"pretest": "npm run build:re",
+		"start": "concurrently --names \"JS,RE\" --prefix-colors \"black.bgYellow.bold,white.bgRed.bold\" --kill-others-on-fail \"npm run start:js\" \"npm run start:re\"",
     "build:js": "react-scripts build",
     "build:re": "bsb -make-world",
     "build": "npm run build:re && npm run build:js",
+    "clean:re": "bsb -clean-world",
+    "clean": "npm run clean:re",
     "format": "prettier --write \"**/*.{js,json,md,yml}\" \"!**/*.bs.js\" && find ./src -regex '.*\\.re' -exec bsrefmt --in-place '{}' \\;",
-    "start": "concurrently --names \"JS,RE\" --prefix-colors \"black.bgYellow.bold,white.bgRed.bold\" --kill-others-on-fail \"npm run start:js\" \"npm run start:re\"",
+    "start:js": "react-scripts start",
+    "start:re": "npm run build:re -- -w",
     "test:ci": "CI=true npm test",
     "test": "react-scripts test"
   },
