--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "reason-react-realworld-example-app",
   "version": "0.1.0",
   "scripts": {
-		"pretest": "npm run build:re",
-		"start": "concurrently --names \"JS,RE\" --prefix-colors \"black.bgYellow.bold,white.bgRed.bold\" --kill-others-on-fail \"npm run start:js\" \"npm run start:re\"",
+    "pretest": "npm run build:re",
+    "start": "concurrently --names \"JS,RE\" --prefix-colors \"black.bgYellow.bold,white.bgRed.bold\" --kill-others-on-fail \"npm run start:js\" \"npm run start:re\"",
     "build:js": "react-scripts build",
     "build:re": "bsb -make-world",
     "build": "npm run build:re && npm run build:js",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@glennsl/bs-jest": "^0.4.9",
     "bs-abstract": "^0.18.0",
+    "bs-decode": "^0.9.0",
     "bs-dom-testing-library": "^0.5.1",
     "bs-fetch": "^0.5.0",
     "bs-platform": "^7.0.1",
