--- a/bsconfig.json
+++ b/bsconfig.json
@@ -22,10 +22,11 @@
   "suffix": ".bs.js",
   "namespace": true,
   "bs-dependencies": [
+		"bs-webapi",
+		"reason-react",
     "bs-abstract",
     "bs-decode",
     "bs-fetch",
-    "reason-react",
     "relude"
   ],
   "bs-dev-dependencies": [
