Format all source code

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "ReasonReact",
     "reason-react"
   ],
-  "author": "Jih-Chi Lee <achi@987.tw>",
+  "author": "Jihchi Lee <achi@987.tw>",
   "license": "MIT",
   "dependencies": {
     "react": "^16.8.1",
