Fix all act warning from test

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -32,6 +32,7 @@
   "bs-dev-dependencies": [
     "@glennsl/bs-jest",
     "bs-dom-testing-library",
+    "bs-jest-fetch-mock",
     "bs-react-testing-library",
     "bs-webapi"
   ],
