--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "bs-decode": "^0.9.0",
     "bs-dom-testing-library": "^0.5.1",
     "bs-fetch": "^0.5.0",
+    "bs-jest-fetch-mock": "^1.0.2",
     "bs-platform": "^7.0.1",
     "bs-react-testing-library": "^0.6.0",
     "bs-webapi": "^0.15.6",
     "concurrently": "^5.1.0",
+    "jest-fetch-mock": "^3.0.1",
     "prettier": "^1.19.1",
     "react-scripts": "^3.3.1",
     "relude": "^0.53.0"
