--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bs-decode": "^0.9.0",
     "bs-dom-testing-library": "^0.5.1",
     "bs-fetch": "^0.5.0",
+    "bs-jest-dom": "^2.0.1",
     "bs-jest-fetch-mock": "^1.0.2",
     "bs-platform": "^7.0.1",
     "bs-react-testing-library": "^0.6.0",
