Upgrade react-scripts to 3.4.0

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "concurrently": "^5.1.0",
     "jest-fetch-mock": "^3.0.1",
     "prettier": "^1.19.1",
-    "react-scripts": "^3.3.1",
+    "react-scripts": "3.4.0",
     "relude": "^0.53.0"
   },
   "browserslist": {
