--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "author": "Jihchi Lee <achi@987.tw>",
   "license": "MIT",
   "dependencies": {
+    "dompurify": "^2.0.8",
+    "marked": "^0.8.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "reason-react": ">=0.7.0"
