Move page relavant components to a dedicated folder

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -7,6 +7,9 @@
     "dir": "src",
     "subdirs": [
       {
+        "dir": "page"
+      },
+      {
         "dir": "__tests__",
         "type": "dev"
       }
