Create a component folder

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -10,6 +10,9 @@
         "dir": "page"
       },
       {
+        "dir": "component"
+      },
+      {
         "dir": "__tests__",
         "type": "dev"
       }
