--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "react-scripts": "3.4.0",
     "relude": "^0.56.0"
 	},
+	"prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5"
+	},
 	"eslintConfig": {
 		"extends": ["react-app"],
 		"ignorePatterns": ["src/**/*.bs.js"]
