neo v1.1.16, build dev & prod

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "bugs": {
         "url": "https://github.com/neomjs/neomjs-realworld-example-app/issues"
     },
-    "homepage": "https://neomjs.de/",
+    "homepage": "https://neomjs.github.io/pages/",
     "dependencies": {
-        "neo.mjs": "^1.1.15"
+        "neo.mjs": "^1.1.16"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.12.0",
