adjusted the buildScripts to be in sync with npx neo-app (& the latest neo version)

--- a/buildScripts/myApps.json
+++ b/buildScripts/myApps.json
@@ -20,7 +20,7 @@
             "title": "Neo Docs"
         },
         "RealWorld": {
-            "input": "myApps/RealWorld.mjs",
+            "input": "buildScripts/entrypoints/RealWorld.mjs",
             "output": "/apps/realworld/",
             "title": "RealWorld"
         }
