--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dompurify": "^2.0.8",
     "marked": "^0.8.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "reason-react": ">=0.7.0"
   },
   "devDependencies": {
@@ -43,10 +43,10 @@
     "bs-react-testing-library": "^0.6.0",
     "bs-webapi": "^0.15.9",
     "concurrently": "^5.1.0",
-    "coveralls": "^3.0.9",
+    "coveralls": "^3.0.11",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^1.19.1",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.1",
     "relude": "^0.56.0"
   },
   "prettier": {
