Upgrade relude to 0.59, bs-abstract is superseded by bs-bastet

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -22,11 +22,11 @@
   "suffix": ".bs.js",
   "namespace": true,
   "bs-dependencies": [
-    "bs-webapi",
-    "reason-react",
-    "bs-abstract",
+    "bs-bastet",
     "bs-decode",
     "bs-fetch",
+    "bs-webapi",
+    "reason-react",
     "relude"
   ],
   "bs-dev-dependencies": [
