--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.5.1",
-    "bs-abstract": "^1.0.0",
-    "bs-decode": "^0.10.0",
+    "bs-bastet": "^1.2.5",
+    "bs-decode": "^0.11.1",
     "bs-dom-testing-library": "^0.5.1",
     "bs-fetch": "^0.5.2",
     "bs-jest-dom": "^2.0.1",
@@ -47,7 +47,7 @@
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.0.4",
     "react-scripts": "^3.4.1",
-    "relude": "^0.56.0"
+    "relude": "^0.59.0"
   },
   "prettier": {
     "singleQuote": true,
