Upgrade bs-(dom|react)-testing-library to latest version

--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.5.1",
+    "@sheerun/mutationobserver-shim": "^0.3.3",
     "bs-bastet": "^1.2.5",
     "bs-decode": "^0.11.1",
-    "bs-dom-testing-library": "^0.5.1",
+    "bs-dom-testing-library": "^0.6.1",
     "bs-fetch": "^0.5.2",
     "bs-jest-dom": "^2.0.1",
     "bs-jest-fetch-mock": "^2.0.0",
     "bs-platform": "^7.2.2",
-    "bs-react-testing-library": "^0.6.0",
+    "bs-react-testing-library": "^0.7.0",
     "bs-webapi": "^0.15.9",
     "concurrently": "^5.1.0",
     "coveralls": "^3.0.11",
