Upgrade reason-react and relude to latest version

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "marked": "^0.8.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "reason-react": ">=0.7.0"
+    "reason-react": "^0.7.1"
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.5.1",
@@ -48,7 +48,7 @@
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.0.4",
     "react-scripts": "^3.4.1",
-    "relude": "^0.61.0"
+    "relude": "^0.62.0"
   },
   "prettier": {
     "singleQuote": true,
