--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,27 @@ jobs:
     steps:
       # SET UP
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: Install Java
         uses: actions/setup-java@v1
         with:
           java-version: 11
 
-      # FORCE FAIL
+      - name: Install Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      # BUILD
+      - name: Restore Cache
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: ${{ runner.os }}-gradle-
+
       - name: Build & Test
-        run: exit 255
+        run: |
+          npm install newman
+          .github/pre-push.sh
