Fix GitHub pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,4 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle-
 
       - name: Build & Test
-        run: |
-          npm install newman
-          .github/pre-push.sh
+        run: .github/pre-push.sh
