--- a/buildScripts/myApps.json
+++ b/buildScripts/myApps.json
@@ -14,13 +14,15 @@
     },
     "apps": {
         "Docs": {
-            "indexPath": "node_modules/neo.mjs/docs/index.ejs",
             "input": "buildScripts/entrypoints/Docs.mjs",
+            "mainThreadAddons": "'GoogleAnalytics', 'HighlightJS', 'Stylesheet'",
             "output": "/docs/",
             "title": "Neo Docs"
         },
         "RealWorld": {
+            "indexPath": "apps/realworld/index.ejs",
             "input": "buildScripts/entrypoints/RealWorld.mjs",
+            "mainThreadAddons": "'LocalStorage', 'Markdown'",
             "output": "/apps/realworld/",
             "title": "RealWorld"
         }
