Implementing jwt BUG: autowired bean is not found

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.h2.console.path=/h2-console/
+spring.h2.console.enabled=true
+hibernate.hbm2ddl.auto=create-drop
+spring.batch.job.enabled=false
 
